[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trustguard-env"
version = "1.0.0"
description = "Real-world Trust & Safety OpenEnv environment for content moderation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "TrustGuard Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "openai>=1.30.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "PyYAML==6.0.1",
    "gradio==4.44.0",
    "huggingface_hub>=0.19.3,<0.24.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/eressss/trustguard-env"

[tool.hatch.build.targets.wheel]
packages = ["env"]
